--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,9 @@ body,
 .app {
   /* height: 100%; */
   /* width: 100%; */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: "Plus Jakarta Sans", sans-serif;
+  overflow-x: hidden;
 }
