--- a/src/pages/waitlist/style.scss
+++ b/src/pages/waitlist/style.scss
@@ -447,6 +447,7 @@
     }
 
     .form-container {
+      display: none !important;
       margin-bottom: 12px !important;
 
       .ant-form-item {}
