--- a/src/pages/waitlist/style.scss
+++ b/src/pages/waitlist/style.scss
@@ -412,6 +412,7 @@
 
   .wait-container {
     display: block !important;
+    max-width: 100vw !important;
     width: 100% !important;
     overflow-x: hidden !important;
 
