--- a/src/pages/waitlist/style.scss
+++ b/src/pages/waitlist/style.scss
@@ -412,7 +412,7 @@
 
   .wait-container {
     display: block !important;
-    max-width: 375px !important;
+    // max-width: 375px !important;
     width: 100% !important;
     overflow-x: hidden !important;
 
@@ -472,7 +472,7 @@
 
     .ant-form-phone {
       .form-control {
-        display: none !important;
+        // display: none !important;
         max-width: 399px !important;
         width: 100% !important;
       }
